Meir new Commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8081
 
+#/////////////////////////////////////////////////
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/AsterTT
+spring.datasource.username=postgres
+spring.datasource.password=user
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
