--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,23 @@
-server.port=8081
-
-#/////////////////////////////////////////////////
-
-spring.datasource.url=jdbc:postgresql://localhost:5433/AsterTT
+spring.datasource.url=jdbc:postgresql://localhost:5432/astertt
 spring.datasource.username=postgres
 spring.datasource.password=user
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+jwt.secret="U3VwZXJTZWNyZXRFeGFtcGxlU2VjdXJlS2V5NDIzMTIzISE="
+jwt.expiration=3600000
+
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.main.allow-bean-definition-overriding=true
